assets/style.css
* {
  font-family: "Changa", sans-serif;
}

/* https://www.freepik.com/free-photos-vectors/background | Background vector created by starline - www.freepik.com  */
body {
  background-image: url(../assets/images/elegant-background.jpg);
}

.float-left {
  float: left;
}
.float-right {
  float: right;
}

.light-font {
  color: #fff;
}

.gray-font {
  color: #dbdbdb;
}

.fa {
  padding: 20px;
  font-size: 30px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
}

.fa:hover {
  opacity: 0.7;
}

.fa-linkedin {
  background: #007bb5;
  color: white;
}

.jumbo-1 {
  background-image: url(./images/boards.jpg);
  background-position: center;
  background-size: 100% auto;
  color: #fff;
}

.card-box-style {
  box-shadow: ;
}

#contact-form {
  padding: 50px;
}

